--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-dyio",
   "version": "0.0.1",
   "description": "A node.js interface to Bowler (http://bowler.io) products, such as the DyIO",
-  "main": "repl.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,5 +19,8 @@
   "license": "BSD",
   "bugs": {
     "url": "https://github.com/DirectXMan12/node-dyio/issues"
+  },
+  "dependencies": {
+    "node-serialport": "1.1.x",
   }
 }
